[package]
name = "turing"
description = "hash function library"
authors = ["luncj <jialun.tsai@gmail.com>"]
keywords = ["hash"]
repository = "https://github.com/luncj/turing"
homepage = "https://github.com/luncj/turing"
documentation = "https://docs.rs/etcd-rs"
edition = "2018"
version = "0.1.0"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
